// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DraftOrderLineItemRow/> render() should render with applied discount 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <small
          class="d-block text-muted"
        >
          <del>
            <span>
              $1.00
            </span>
          </del>
        </small>
        <div>
          <button
            class="p-0 button focusable btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $0.50
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <input
      class="form-control"
      min="1"
      type="number"
      value="1"
    />
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $0.50
        </span>
      </strong>
      <button
        class="wrapper delete wrapper medium text medium"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          close
        </i>
      </button>
    </div>
  </td>
</tr>
`;

exports[`<DraftOrderLineItemRow/> render() should render with product image 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="p-0 button focusable btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <input
      class="form-control"
      min="1"
      type="number"
      value="1"
    />
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $1.00
        </span>
      </strong>
      <button
        class="wrapper delete wrapper medium text medium"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          close
        </i>
      </button>
    </div>
  </td>
</tr>
`;

exports[`<DraftOrderLineItemRow/> render() should render with product stock quantity 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="success"
    >
      99
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="p-0 button focusable btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <input
      class="form-control"
      min="1"
      type="number"
      value="0"
    />
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $0.00
        </span>
      </strong>
    </div>
  </td>
</tr>
`;

exports[`<DraftOrderLineItemRow/> render() should render without product image 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt=""
        class="img"
        src="test-file-stub"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="p-0 button focusable btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <input
      class="form-control"
      min="1"
      type="number"
      value="1"
    />
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $1.00
        </span>
      </strong>
      <button
        class="wrapper delete wrapper medium text medium"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          close
        </i>
      </button>
    </div>
  </td>
</tr>
`;

exports[`<DraftOrderLineItemRow/> render() should render without product stock quantity because the inventory is not tracked 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="p-0 button focusable btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <input
      class="form-control"
      min="1"
      type="number"
      value="0"
    />
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $0.00
        </span>
      </strong>
    </div>
  </td>
</tr>
`;

exports[`<DraftOrderLineItemRow/> render() should render without quantity and without price 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="p-0 button focusable btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <input
      class="form-control"
      min="1"
      type="number"
      value="0"
    />
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $0.00
        </span>
      </strong>
    </div>
  </td>
</tr>
`;
